fix arcade redirect to main site

--- a/templates/arcade/base.html
+++ b/templates/arcade/base.html
@@ -21,7 +21,7 @@
 <body class="arcade-body">
     <!-- Arcade Header -->
     <header class="arcade-header">
-        <a href="https://aaronrmcgrath.com" class="arcade-back-link">
+        <a href="https://www.aaronrmcgrath.com" class="arcade-back-link">
             &larr; Back to Portfolio
         </a>
         <div class="arcade-header-content">
